...
                )
            }
        }
    }
}

const val INSTALL_MODE_SELECTOR_TAG = "installModeSelector"
const val APPEARANCE_SELECTOR_TAG = "appearanceSelector"

