...
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import app.yuki.core.designsystem.theme.YukiSpacing
import app.yuki.core.settings.api.SettingsContributor
import app.yuki.core.settings.api.SettingsGroup

const val SETTINGS_LIST_TAG = "settingsList"

@Composable
fun SettingsScreen(
    contributors: Set<SettingsContributor>,
    contentPadding: PaddingValues,
    modifier: Modifier = Modifier,
...
